# wotjs-core

./: .eslintrc.js  .eslintrc.json  .gitignore  CMakeLists.txt  CMakeVersion.cmake  LICENSE  Makefile  README.md  README.zh-CN.md  core.cmake  index.html  package.json  tsconfig.json
app/: make.cmake
app/tpm/: app.js
core/: .eslintrc.json  .gitignore  CMakeLists.txt  Makefile  README.md  core.cmake  index.d.ts  make.cmake  package.json
core/examples/: args.js  assert.js  at.js  colors.js  event.js  gpio.js  http-client2.js  http-server.js  http.js  jsonrpc.js  logs.js  mqtt.js  mqtts.js  os-exec-sub.js  os.js  pipe-client.js  pipe-client2.js  pipe-server.js  pipe.js  serial.js  shell-client.js  shell-server.js  spawn.js  storage.js  stream.js  tcp-client.js  tcp-server.js  tcp.js  tcp2.js  test-shell.js  test-sse.js  tls.js  tty-rw.js  tty.js  uart.js  udp.js  upload.js  watchdog.js
core/include/: wotjs.h
core/js/: make.cmake  version.json
core/src/: bootstrap.c  cli.c  fs.c  os.c  qjs.c  qjsc.c  std.c  tjs.h  uart.c  utils.h  vm.c  xhr.c
core/tjs/: make.cmake
core/types/: lib.core.d.ts  lib.ext.d.ts  lib.internal.d.ts  lib.native.d.ts  lib.net.d.ts
docs/: TODO.md
docs/refs/: code-debug.md  code-git.md  linux-console.md  linux-crontab.md  linux-loopback.md  linux-memstat.md  linux-network.md  linux-shell.md  linux-timezone.md  linux-watchdog.md  mdnsd.md  media.md  strings.md
docs/wotjs/: 00-wotjs-design.xmind  01-wotjs-summary-design.md  10-wotjs-command.md  11-wotjs-code-style.md  12-wotjs-code-type-check.md  20-wotjs-rpc-protocol.md  30-wotjs-scripting-api-native.md  31-wotjs-scripting-api-web.md  40-wotjs-unit-test.md
js/: make.cmake
js/bootstrap/: bootstrap.js  native-bootstrap.js  worker-bootstrap.js
js/core/: fs.js  os.js  path.js  process.js  util.js  wasm.js
js/ext/: assert.js  bluetooth.js  config.js  devices.js  getopts.js  gpio.js  logs.js  serial.js
js/internal/: console.js  crypto.js  encoding.js  event-target.js  fetch.js  form-data.js  navigator.js  storage.js  streams.js  url.js
js/net/: dns.js  http.js  mqtt.js  net.js  tls.js  wot.js
modules/: make.cmake
modules/mdns/: README.md  make.cmake
modules/networking/: README.md  make.cmake
modules/redis/libhiredis/src/: CMakeLists.txt  Makefile  hiredis-targets.cmake
modules/redis/libhiredis/src/examples/: example-libuv.c
src/: crypto.c  dns.c  error.c  fs.c  hal.c  http.c  misc.c  modules.c  os.c  private.h  process.c  qjsc.c  signals.c  std.c  streams.c  timers.c  tls.c  uart.c  udp.c  util.c  utils.c  version.c  vm.c  worker.c
targets/: make.cmake
tools/: fs.js  node.js  test-sh.js  test-udp.js  test-write.js  test.js
types/: index.d.ts  lib.core.d.ts  lib.ext.d.ts  lib.internal.d.ts  lib.native.d.ts  lib.net.d.ts
(+391 files in other folders)
